Gave each ticket it's own unique id and found a solution so that the colors are random instead of hard coded but unforutnely the change every time

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -467,7 +467,7 @@ label:focus input::placeholder {
 }
 
 @media (min-width: 300px) and (max-width: 769px) {
-  #reply {
+  .reply {
     display: flex;
   }
 }
