--- a/views/contacts.handlebars
+++ b/views/contacts.handlebars
@@ -4,7 +4,7 @@
     <div class="content" id="contacts">
 
 
-        <h2 class="display-4"><i class="fas fa-address-card"></i>Contacts</h2>
+        <h2 class="display-4"><i class="fas fa-address-card"></i> Contacts</h2>
         <ul class="nav nav-tabs nav-fill" id="myTab" role="tablist">
             <li class="nav-item">
                 <a class="nav-link active" id="Specialists-tab" data-toggle="tab" href="#Specialists" role="tab"
@@ -34,7 +34,7 @@
                 </table>
             </div>
             <div class="tab-pane" id="Customers" role="tabpanel" aria-labelledby="Customers-tab"><br>
-                <button class="btn btn-info" data-toggle="modal" data-target=".bd-example-modal-lg1">
+                <button class="btn btn-info mb-2" data-toggle="modal" data-target=".bd-example-modal-lg1">
                     <i class="far fa-plus-square"></i> New Customer
                 </button>
                 <br>
