but color on the table headers

--- a/views/contacts.handlebars
+++ b/views/contacts.handlebars
@@ -19,7 +19,7 @@
         <div class="tab-content">
             <div class="tab-pane active" id="Specialists" role="tabpanel" aria-labelledby="Specialists-tab"><br>
                 <table class="table table-hover">
-                    <thead>
+                    <thead style="background-color:#7a6eb8" class="text-light">
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">First Name</th>
@@ -39,7 +39,7 @@
                 </button>
                 <br>
                 <table class="table table-hover">
-                    <thead>
+                    <thead style="background-color:#7a6eb8" class="text-light">
                         <tr>
                             <th scope="col">#</th>
                             <th scope="col">First Name</th>
