made it so that the first option is disabled in the add customer modal

--- a/views/partials/AddCustomer/Add-block.handlebars
+++ b/views/partials/AddCustomer/Add-block.handlebars
@@ -58,7 +58,7 @@
                             <div class="form-group">
                                 <label for="recipient-title" class="col-form-label text-dark">State:</label>
                                 <select name="state" class="form-control" id="CusState" required>
-                                    <option value="..">Select..</option>
+                                    <option disabled selected value="..">Select..</option>
                                     <option value="AL">AL</option>
                                     <option value="AK">AK</option>
                                     <option value="AZ">AZ</option>
