found a semi-working calander...

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -14,6 +14,72 @@
         <div class="container">
             <div class="row">
                 <div class="col mb-3">
+                    <main>
+                        <h2></h2>
+                        <hr>
+
+                        <h4 id="month" class="align-self-center"></h4>
+
+
+                        <br>
+                        <table id="table" class="table table-bordered">
+                            <tr>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+
+
+                            </tr>
+                        </table>
+
+                    </main>
+                </div>
+                {{!-- <div class="col mb-3">
                     <div class="month">
                         <ul>
                             <li class="prev">&#10094;</li>
@@ -68,7 +134,7 @@
                         <li>30</li>
                         <li>31</li>
                     </ul>
-                </div>
+                </div> --}}
             </div>
             <div class="col align-self-center">
                 <div class="row">
@@ -79,12 +145,12 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h3>2345</h3>
-                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+                                        <h6 class="mt-0 mb-1">Total Tickets</h6>
 
                                     </div>
-                                    <h3 class="align-self-center">
-                                        <i class="fas fa-chart-pie"></i>
-                                    </h3>
+                                    <h2 class="align-self-center">
+                                        <i class="fas fa-inbox"></i>
+                                    </h2>
                                 </div>
 
 
@@ -98,12 +164,12 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h3>2345</h3>
-                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+                                        <h6 class="mt-0 mb-1">Total Customers</h6>
 
                                     </div>
-                                    <h3 class="align-self-center ml-2">
-                                        <i class="fas fa-chart-pie"></i>
-                                    </h3>
+                                    <h2 class="align-self-center ml-2">
+                                        <i class="fas fa-address-card"></i>
+                                    </h2>
                                 </div>
                             </div>
                         </div>
@@ -117,12 +183,12 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h3>2345</h3>
-                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+                                        <h6 class="mt-0 mb-1">Total Open Tickets</h6>
 
                                     </div>
-                                    <h3 class="align-self-center">
-                                        <i class="fas fa-chart-pie"></i>
-                                    </h3>
+                                    <h2 class="align-self-center">
+                                        <i class="fas fa-envelope-open-text"></i>
+                                    </h2>
                                 </div>
 
 
@@ -136,12 +202,12 @@
                                 <div class="media">
                                     <div class="media-body">
                                         <h3>2345</h3>
-                                        <h6 class="mt-0 mb-1">Total Revenue</h6>
+                                        <h6 class="mt-0 mb-1">Total Closed Tickets</h6>
 
                                     </div>
-                                    <h3 class="align-self-center">
-                                        <i class="fas fa-chart-pie"></i>
-                                    </h3>
+                                    <h2 class="align-self-center">
+                                        <i class="fas fa-envelope"></i>
+                                    </h2>
                                 </div>
                             </div>
                         </div>
@@ -192,9 +258,40 @@
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script src="/assets/js/charts.js"></script>
 
+<script>
+    const monthNames = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"
+    ];
+
+    const dayNames = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+
+    var d = new Date();
+    var day = d.getDay();
+    var date = d.getDate();
+    var month = d.getMonth();
+    var year = d.getFullYear();
+
+    // write to DOM
+    document.querySelectorAll("th").forEach((el, i) => el.textContent = dayNames[i].substring(0, 3));
+    today = `${dayNames[day]}, ${monthNames[month]} ${date}, ${year}`;
+    month1 = `${monthNames[month]}  ${year}`;
+
+    document.querySelector('h2').textContent = today;
+    document.querySelector('#month').textContent = month1;
+
+    // get all table data elements
+    document.querySelectorAll("td").forEach((el, i) => {
+        el.textContent = d.getDate(d.setDate(i + 1))
+    });
+
+    // style 'today'
+    const gridNum = date - 1;
+    document.querySelectorAll("td")[gridNum].classList.add("today");
 
 
-<style>
+
+</script>
+
+{{!-- <style>
     * {
         box-sizing: border-box;
     }
@@ -299,4 +396,56 @@
             width: 12.2%;
         }
     }*/
+</style> --}}
+
+<style>
+    :root {
+        --clr-lighter: hsl(250, 10%, 98%);
+        --clr-light: hsl(250, 10%, 92%);
+        --clr-dark: hsl(250, 10%, 22%);
+        --clr-theme: hsl(204, 70%, 53%);
+    }
+
+    main {
+        padding: 1rem;
+        /*   background: var(--dark-color);
+  color: var(--lighter-color); */
+    }
+
+    header {
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        justify-items: center;
+        align-items: center;
+    }
+
+    th {
+        text-align: center;
+        background-color: var(--clr-dark);
+        color: var(--clr-lighter);
+    }
+
+    td {
+        text-align: center;
+        background-color: var(--clr-lighter);
+    }
+
+    button {
+        border: none;
+        padding: .25rem .5rem;
+        background-color: var(--clr-light);
+        font-weight: bold;
+    }
+
+    .today {
+        color: var(--clr-theme);
+        background-color: var(--clr-light);
+        font-weight: bold;
+    }
+
+    td:hover {
+        background-color: var(--clr-light);
+        cursor: pointer;
+    }
 </style>
