--- a/views/partials/call/call-block.handlebars
+++ b/views/partials/call/call-block.handlebars
@@ -13,7 +13,7 @@
                 <h3 class="modalAv avatar">CD</h3>
                 <h3>Cathy Dates</h3>
 
-                <p class="text-lighjt">cathydates@gmail.com</p>
+                <p class="text-light">cathydates@gmail.com</p>
                 <p id="logMsg"></p>
                 <div class="mb-2">
                     <button type="button" id="call" class="btn btn-outline-light mb-3">
