just added an icon to the date

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -96,7 +96,7 @@
                 <div class="col align-self-center">
                     <div class="jumbotron jumbotron-fluid clock">
                         <div class="container">
-                            <h3 class="display-4" id="month"></h3>
+                            <h3 class="display-4" id="month"><i class="fas fa-calendar-alt"></i> </h3>
                             <h3 class="display-4" id="date"></h3>
                             <p class="lead">
                             <h3 id="time"></h3>
