--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -94,7 +94,7 @@
 
                 </div>
                 <div class="col align-self-center">
-                    <div class="jumbotron jumbotron-fluid clock">
+                    <div class="jumbotron jumbotron-fluid clock py-3">
                         <div class="container">
                             <h3 class="display-4" id="month"><i class="fas fa-calendar-alt"></i> </h3>
                             <h3 class="display-4" id="date"></h3>
