--- a/views/partials/navbar/nav-block.handlebars
+++ b/views/partials/navbar/nav-block.handlebars
@@ -48,7 +48,7 @@
             </a>
         </li>
         <li>
-            <a href="/ticket" id="ticketBtn">
+            <a href="/tickets" id="ticketBtn">
                 <i class="fas fa-inbox"></i>
                 <span class="btnName">Tickets</span>
             </a>
